[project]
name = "cinii-mcp"
version = "2.0.1"
description = "MCP stdio server for the CiNii Research API (Japanese scholarship)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Christopher Gerteis", email = "christopher.gerteis@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "cinii",
    "nii",
    "japanese-studies",
    "east-asian-studies",
    "digital-humanities",
    "bibliographic-search",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://www.christophergerteis.net"
Repository = "https://github.com/ckgerteis/cinii-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "mediation.py"]
